# bevy-dungeon-fun

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  run  run.bat  webdist.sh  webrun.bat
assets/: collider-pillar.gltf  config.json  dungeon.blend  dungeon.blend1  dungeon.gltf
src/: app_state.rs  config.rs  debug_mode.rs  dungeon_scene.rs  instructions.rs  main.rs  player.rs
