[package]
edition = "2021"
name = "bevy-fun2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_common_assets = { version = "0.6.0", features = ["json"] }
# We can't use 0.21.0 due to https://github.com/dimforge/bevy_rapier/issues/345. Once 0.22 is
# released, we can switch to that.
bevy_rapier3d = {git = "https://github.com/dimforge/bevy_rapier.git"}
serde = { version = "1.0.164", features = ["serde_derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
