[package]
edition = "2021"
name = "bevy-fun2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy-inspector-egui = { version = "0.19.0", optional = true }
bevy_common_assets = { version = "0.7.0", features = ["json"] }
bevy_rapier3d = { version = "0.22.0" }
serde = { version = "1.0.171", features = ["serde_derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
debug_mode = ["dep:bevy-inspector-egui"]
