[package]
edition = "2021"
name = "bevy-fun2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = [
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "hdr",
  "bevy_gizmos",
  "tonemapping_luts",
  "ktx2",
  "zstd",
] }
bevy-inspector-egui = { version = "0.19.0", optional = true }
bevy_common_assets = { version = "0.7.0", features = ["json"] }
bevy_rapier3d = { version = "0.22.0" }
serde = { version = "1.0.171", features = ["serde_derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
debug_mode = ["dep:bevy-inspector-egui"]
